# freedeck-pico

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_install.sh  i2c_7seg.cpp  install.sh  main.cpp  main.hpp_disabled  pico_sdk_import.cmake  pio_square.hpp  pio_testing.cpp  settings.hpp  version.hpp
.github/workflows/: develop.yml  main.yml
DownloadProject/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in
lib/: tm1637.cpp  tm1637.hpp  tm1637font.h
lib/freedeck/: CMakeLists.txt
lib/freedeck/include/: Button.hpp  button.hpp  freedeck.hpp  freedeck_serial.hpp  init.hpp  util.hpp
lib/freedeck/src/: Button.cpp  button.cpp  freedeck.cpp  freedeck_serial.cpp  hw_config.c  init.cpp  util.cpp
lib/keyboard/: CMakeLists.txt  license  readme.md
lib/keyboard/include/: keyboard.h  keyboard.hpp  tusb_config.h  usb_descriptors.h
lib/keyboard/src/: keyboard.c  keyboard.cpp  usb_descriptors.c  usb_descriptors.c_kilian  usb_descriptors.cpp
lib/ssd1306/: CMakeLists.txt
lib/ssd1306/include/: GFX.hpp  SSD1306.hpp  font.hpp  logo.hpp
lib/ssd1306/src/: GFX.cpp  SSD1306.cpp  logo.cpp
lib/usb_com/: CMakeLists.txt
lib/usb_com/include/: fd_usb.hpp  tusb_config.h  usb_descriptors.hpp
lib/usb_com/src/: fd_usb.cpp
pio/: blink.pio  jump.pio  tm1637.pio
