file(GLOB_RECURSE FILES "*.cpp" "*.c")
set(LIBRARY_NAME freedeck_lib)
add_library(${LIBRARY_NAME} STATIC ${FILES})
target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries(${LIBRARY_NAME} pico_stdlib ssd1306 usb_keyboard tinyusb_board tinyusb_device settings FatFs_SPI)
